crates/diffguard-diff/tests/snapshots/snapshot_tests__error_malformed_hunk_header.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", err)"
---
MalformedHunkHeader("@@ -1 +x @@")
