crates/diffguard-diff/tests/snapshots/snapshot_tests__error_overflow.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", err)"
---
Overflow("too many lines (> 4294967295)")
