crates/diffguard-diff/tests/snapshots/snapshot_tests__parse_deleted_file_for_deleted_scope.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: snapshot
---
lines:
DiffLine { path: "old_file.rs", line: 1, content: "fn old() {}", kind: Deleted }
DiffLine { path: "old_file.rs", line: 2, content: "fn deprecated() {}", kind: Deleted }
DiffLine { path: "old_file.rs", line: 3, content: "fn removed() {}", kind: Deleted }
stats:
DiffStats { files: 1, lines: 3 }
