crates/diffguard-diff/tests/snapshots/snapshot_tests__parse_deleted_lines.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: snapshot
---
lines:
DiffLine { path: "src/lib.rs", line: 2, content: "fn b() {}", kind: Deleted }
DiffLine { path: "src/lib.rs", line: 3, content: "fn c() {}", kind: Deleted }
stats:
DiffStats { files: 1, lines: 2 }
