crates/diffguard-diff/tests/snapshots/snapshot_tests__parse_empty_diff.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: snapshot
---
lines:
[]
stats:
DiffStats { files: 0, lines: 0 }
