crates/diffguard-diff/tests/snapshots/snapshot_tests__parse_mode_only_change_skipped.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: snapshot
---
lines:
DiffLine { path: "src/lib.rs", line: 2, content: "fn b() {}", kind: Added }
stats:
DiffStats { files: 1, lines: 1 }
