crates/diffguard-diff/tests/snapshots/snapshot_tests__parse_multiple_files.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: snapshot
---
lines:
DiffLine { path: "src/first.rs", line: 2, content: "fn first_added() {}", kind: Added }
DiffLine { path: "src/second.rs", line: 2, content: "fn second_added() {}", kind: Added }
stats:
DiffStats { files: 2, lines: 2 }
