crates/diffguard-diff/tests/snapshots/snapshot_tests__parse_renamed_file_uses_new_path.snap
---
source: crates/diffguard-diff/tests/snapshot_tests.rs
expression: snapshot
---
lines:
DiffLine { path: "new/path.rs", line: 2, content: "fn added() {}", kind: Added }
stats:
DiffStats { files: 1, lines: 1 }
